--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li data-target="#myCarousel" data-slide-to="3"></li>
         <li data-target="#myCarousel" data-slide-to="4"></li>
         <li data-target="#myCarousel" data-slide-to="5"></li>
+        <li data-target="#myCarousel" data-slide-to="6"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
@@ -62,7 +63,12 @@
           </div>
         </div>
         <div class="item">
-          <img id="stupid" class="img-responsive" src="../FathersDay/static/img/dad6.jpg" alt="Sixth slide">
+          <img id="stupid" class="img-responsive" src="../FathersDay/static/img/dad7.jpg" alt="Sixth slide">
+          <div class="container">
+          </div>
+        </div>
+        <div class="item">
+          <img id="stupid" class="img-responsive" src="../FathersDay/static/img/dad6.jpg" alt="Seventh slide">
           <div class="container">
           </div>
         </div>
