fix photo 6 again

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="item">
-          <img id="stupid" class="img-responsive" src="../FathersDay/static/img/dad6.jpg" alt="Seventh slide">
+          <img id="stupid" class="img-responsive" src="../FathersDay/static/img/dad6.JPG" alt="Seventh slide">
           <div class="container">
           </div>
         </div>
